--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							</picture>
 						</div>
 						<div id="banner-text">
-							<h2 class="vcard"><span class="fn">Austin Leung</span></h2><br>
+							<h1 class="vcard"><span class="fn">Austin Leung</span></h1><br>
 							<p>Hi, I'm Austin, a junior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. <br><br>This past summer I worked on developing a platform to democratize tech skills with Pluralsight!
 							</p>
 						</div><br>
@@ -256,9 +256,9 @@
 							<img src="imgs/ps.png" alt="Pluralsight"/>
 						</div>
 						<div class="col-sm-10">
-							<h4><b>Software Engineering Intern</b></h4>
+							<h4><b>Software Developer Intern</b></h4>
 							<h5 class="font-yellow">
-								<b>Pluralsight</b>
+								<b>Pluralsight | Remote</b>
 							</h5>
 							<h6 class="margin-t-9">May 2020 - Aug 2020</h6>
 							<ul class="list margin-b-30">
