Update work exp

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</div>
 						<div id="banner-text">
 							<h1 class="vcard"><span class="fn">Austin Leung</span></h1><br>
-							<p>Hi, I'm Austin, a junior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. <br><br>This past summer I worked on developing a platform to democratize tech skills with Pluralsight!
+							<p>Hi, I'm Austin, a rising senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. <br><br>This summer I'm developing a platform for restaurants to reach their customers with Doordash!
 							</p>
 						</div><br>
 						<ul class="social-icons">
@@ -250,6 +250,24 @@
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-9">
+
+					<div class="experience margin-b-50 row">
+						<div class="col-sm-2 company">
+							<img src="imgs/dd.png" alt="Doordash"/>
+						</div>
+						<div class="col-sm-10">
+							<h4><b>Software Engineer Intern</b></h4>
+							<h5 class="font-yellow">
+								<b>Doordash | Remote</b>
+							</h5>
+							<h6 class="margin-t-9">Summer 2021</h6>
+							<ul class="list margin-b-30">
+								<li>😋</li>
+							</ul>
+							<div class="skills">
+							</div>
+						</div>
+					</div><!-- experience -->
 
 					<div class="experience margin-b-50 row">
 						<div class="col-sm-2 company">
