--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</div>
 						<div id="banner-text">
 							<h1 class="vcard"><span class="fn">Austin Leung</span></h1><br>
-							<p>Hi, I'm Austin, a rising senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. <br><br>This summer I'm developing a platform for restaurants to reach their customers with DoorDash!
+							<p>Hi, I'm Austin, a rising senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. I'm passionate about full-stack development!<br><br>This summer I'm developing a platform for restaurants to reach their customers with DoorDash!
 							</p>
 						</div><br>
 						<ul class="social-icons">
@@ -265,6 +265,13 @@
 								😋
 							</ul>
 							<div class="skills">
+								<span class="skill">HTML/CSS/JS</span>
+								<span class="skill">TypeScript</span>
+								<span class="skill">React</span>
+								<span class="skill">Redux</span>
+								<span class="skill">Kotlin</span>
+								<span class="skill">REST</span>
+								<span class="skill">PostgreSQL</span>
 							</div>
 						</div>
 					</div><!-- experience -->
@@ -295,7 +302,6 @@
 								<span class="skill">.Net</span>
 								<span class="skill">PostgreSQL</span>
 								<span class="skill">Docker</span>
-								<span class="skill">TeamCity</span>
 							</div>
 						</div>
 					</div><!-- experience -->
