Add new projects

--- a/index.html
+++ b/index.html
@@ -65,14 +65,54 @@
 			</div>
 		</div>
 		<!-- close container -->
-		<div class="row justify-content-md-center">
+    <div class="row justify-content-md-center">
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+				<div class="hovereffect"> <img class="img-responsive" src="imgs/flp.png" alt="FLP Inventory System">
+					<div class="overlay">
+						<h2>FLP Inventory System</h2>
+						<a class="info fts" href="http://flpinventory.com/">
+							<div class="infoText"> A complete inventory system for the Foster Love Project non-profit organization, including customized reports and analytics.
+								<div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">Python</span> <span class="skill">Django</span> </div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 				<div class="hovereffect"> <img class="img-responsive" src="imgs/textlive.png" alt="TextLive">
 					<div class="overlay">
 						<h2>TextLive</h2>
 						<a class="info textlive" href="https://play.google.com/store/apps/details?id=com.textlive">
 							<div class="infoText"> An Android app where users have a conversation through live text instead of separately sent messages.
 								<div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">React Native</span> <span class="skill">Node</span> <span class="skill">Express</span> <span class="skill">MongoDB</span> </div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="hovereffect"> <img class="img-responsive" src="imgs/queue.png" alt="15-122 Office Hours Queue">
+          <div class="overlay">
+            <h2>15-122 Office Hours Queue</h2>
+            <a class="info fts" href="https://q.15122.tk/">
+              <div class="infoText"> Open source contributions to an office hours queue primarily used for CMU's 15-122 course, including implementing a prompt for students to update their question.
+                <div class="skills"> <span class="skill">HTML/CSS/JS</span> </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+		</div>
+		<!-- close row -->
+    <br>
+		<div class="row justify-content-md-center">
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+				<div class="hovereffect"> <img class="img-responsive" src="imgs/gvcs.png" alt="GVCS Database System">
+					<div class="overlay">
+						<h2>GVCS Database System</h2>
+						<a class="info fts" href="https://cmuisprojects.org/projects.html">
+							<div class="infoText"> A database system for non-profit organization Greater Valley Community Services to keep track of hours and billings to Pittsburgh's Allegheny county.
+								<div class="skills"> <span class="skill">Microsoft Access</span> <span class="skill">Microsoft Excel</span> <span class="skill">SQL</span> </div>
 							</div>
 						</a>
 					</div>
@@ -150,24 +190,22 @@
 			</div>
 		</div>
 		<!-- close row -->
-		<br>
-		<div class="row justify-content-md-center">
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-				<div class="hovereffect"> <img class="img-responsive" src="imgs/findthesets.png" alt="Find the Sets">
-					<div class="overlay">
-						<h2>Find the Sets</h2>
-						<a class="info fts" href="https://github.com/austin-leung/GyulHap">
-							<div class="infoText"> A cognitive time-based game where players match sets of images based on shape, color, and background.
-								<div class="skills"> <span class="skill">Java</span> <span class="skill">Processing</span> </div>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12"></div>
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12"></div>
-		</div>
-		<!-- close row -->
+    <br>
+    <div class="row justify-content-md-center">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="hovereffect"> <img class="img-responsive" src="imgs/findthesets.png" alt="Find the Sets">
+          <div class="overlay">
+            <h2>Find the Sets</h2>
+            <a class="info fts" href="https://github.com/austin-leung/GyulHap">
+              <div class="infoText"> A cognitive time-based game where players match sets of images based on shape, color, and background.
+                <div class="skills"> <span class="skill">Java</span> <span class="skill">Processing</span> </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- close row -->
 	</section>
 	<hr />
 	<section class="experience-section section exp">
