--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
 	</section>
 	<!-- intro-section -->
 	<br>
-	<section class="section proj exp">
+	<section class="section-content proj">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>Projects</b></h3> </div>
+						<h3><b>Projects</b></h3> 
+          </div>
 				</div>
 				<!-- col-sm-4 -->
 			</div>
@@ -208,7 +209,7 @@
     <!-- close row -->
 	</section>
 	<hr />
-	<section class="experience-section section exp">
+	<section class="section-content exp">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3">
@@ -247,7 +248,6 @@
 						</div>
 					</div>
 					<!-- experience -->
-					<br>
 					<div class="experience margin-b-50 row">
 						<div class="col-sm-2 company"> <img src="imgs/scs.gif" alt="CMU SCS" /> </div>
 						<div class="col-sm-10">
@@ -264,7 +264,6 @@
 						</div>
 					</div>
 					<!-- experience -->
-					<br>
 					<div class="experience margin-b-50 row">
 						<div class="col-sm-2 company">
 							<picture>
@@ -284,7 +283,6 @@
 						</div>
 					</div>
 					<!-- experience -->
-					<br>
 					<div class="experience margin-b-50 row">
 						<div class="col-sm-2 company"> <img src="imgs/adagio.png" alt="Adagio" /> </div>
 						<div class="col-sm-10">
