Fix divider responsiveness

--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
       </div>
 		</div>
 		<!-- close row -->
-    <br>
 		<div class="row justify-content-md-center">
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 				<div class="hovereffect"> <img class="img-responsive" src="imgs/gvcs.png" alt="GVCS Database System">
@@ -147,7 +146,6 @@
 			</div>
 		</div>
 		<!-- close row -->
-		<br>
 		<div class="row justify-content-md-center">
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 				<div class="hovereffect">
@@ -191,7 +189,6 @@
 			</div>
 		</div>
 		<!-- close row -->
-    <br>
     <div class="row justify-content-md-center">
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="hovereffect"> <img class="img-responsive" src="imgs/findthesets.png" alt="Find the Sets">
@@ -208,7 +205,11 @@
     </div>
     <!-- close row -->
 	</section>
-	<hr />
+  <div class="divider">
+    <div class="circle-left"></div>
+    <hr />
+    <div class="circle-right"></div>
+  </div>
 	<section class="section-content exp">
 		<div class="container">
 			<div class="row">
