--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </div>
 
-      <div class="row justify-content-md-center">
+      <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect"> <img class="img-responsive" src="imgs/flp.png" alt="FLP Inventory System">
             <div class="overlay">
@@ -101,7 +101,7 @@
         </div>
       </div>
       <!-- close row -->
-      <div class="row justify-content-md-center">
+      <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect"> <img class="img-responsive" src="imgs/gvcs.png" alt="GVCS Database System">
             <div class="overlay">
@@ -142,7 +142,7 @@
         </div>
       </div>
       <!-- close row -->
-      <div class="row justify-content-md-center">
+      <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <picture>
@@ -185,7 +185,7 @@
         </div>
       </div>
       <!-- close row -->
-      <div class="row justify-content-md-center">
+      <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect"> <img class="img-responsive" src="imgs/findthesets.png" alt="Find the Sets">
             <div class="overlay">
@@ -219,7 +219,7 @@
         </div>
         <!-- col-sm-4 -->
         <div class="col-sm-9">
-          <div class="experience margin-b-50 row">
+          <div class="experience margin-b-50 row exp-row">
             <div class="col-sm-2 company"> <img src="imgs/dd.png" alt="DoorDash" /> </div>
             <div class="col-sm-10">
               <h4><b>Software Engineer Intern</b></h4>
@@ -232,7 +232,7 @@
             </div>
           </div>
           <!-- experience -->
-          <div class="experience margin-b-50 row">
+          <div class="experience margin-b-50 row exp-row">
             <div class="col-sm-2 company"> <img src="imgs/ps.png" alt="Pluralsight" /> </div>
             <div class="col-sm-10">
               <h4><b>Software Developer Intern</b></h4>
@@ -249,7 +249,7 @@
             </div>
           </div>
           <!-- experience -->
-          <div class="experience margin-b-50 row">
+          <div class="experience margin-b-50 row exp-row">
             <div class="col-sm-2 company"> <img src="imgs/scs.gif" alt="CMU SCS" /> </div>
             <div class="col-sm-10">
               <h4><b>Teaching Assistant (Principles of Imperative Computation)</b></h4>
@@ -265,7 +265,7 @@
             </div>
           </div>
           <!-- experience -->
-          <div class="experience margin-b-50 row">
+          <div class="experience margin-b-50 row exp-row">
             <div class="col-sm-2 company">
               <picture>
                 <source type="image/webp" srcset="imgs/lti.webp"> <img src="imgs/lti.png" alt="CMU" /> </picture>
@@ -284,7 +284,7 @@
             </div>
           </div>
           <!-- experience -->
-          <div class="experience margin-b-50 row">
+          <div class="experience margin-b-50 row exp-row">
             <div class="col-sm-2 company"> <img src="imgs/adagio.png" alt="Adagio" /> </div>
             <div class="col-sm-10">
               <h4><b>Technology Intern</b></h4>
