--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
 	<section class="section-content proj">
 		<div class="container-fluid">
       
-      <div class="container">
-        <div class="heading">
-          <h3><b>Projects</b></h3> 
-        </div>
+      <div class="heading">
+        <h3><b>Projects</b></h3> 
       </div>
 
       <div class="row justify-content-md-center proj-row">
@@ -215,7 +213,8 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="heading">
-            <h3><b>Experience</b></h3> </div>
+            <h3><b>Experience</b></h3> 
+          </div>
         </div>
         <!-- col-sm-4 -->
         <div class="col-sm-9">
