--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 							<li class="linkedin"><a href="https://www.linkedin.com/in/austinhleung"><i class="ion-social-linkedin"></i></a></li>
 							<li class="mail"><a href="mailto:austinle@cs.cmu.edu"><i class="ion-android-mail"></i></a></li>
 						</ul> <a class="btn btn-border-purple" href="imgs/Austin Leung Resume.pdf">Resume</a>
-						<br>
-						<br> </div>
+					</div>
 					<!-- intro -->
 				</div>
 				<!-- col-sm-8 -->
