--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 						<div id="banner-text">
 							<h1 class="vcard"><span class="fn">Austin Leung</span></h1>
 							<br>
-							<p>Hi, I'm Austin, a rising senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. I'm passionate about full-stack development!
+							<p>Hi, I'm Austin, a rising senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. I'm passionate about full stack development!
 								<br>
-								<br>This summer I'm developing a platform for restaurants to reach their customers with DoorDash! </p>
+								<br>This summer I'm developing a platform for restaurants to reach their customers with DoorDash!</p>
 						</div>
 						<br>
 						<ul class="social-icons">
@@ -225,7 +225,10 @@
                 <b>DoorDash | Remote</b>
               </h5>
               <h6 class="margin-t-9">Summer 2021</h6>
-              <ul class="list margin-b-30"> 😋 </ul>
+              <ul class="list margin-b-30">
+                <li>Architect and implement an onboarding experience for self-delivery merchants to add themselves to the DoorDash platform, expanding merchant selection for consumers</li>
+                <li>Create trial info components to drive increased merchant onboarding conversion</li>
+              </ul>
               <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">TypeScript</span> <span class="skill">React</span> <span class="skill">Redux</span> <span class="skill">Kotlin</span> <span class="skill">REST</span> <span class="skill">PostgreSQL</span> </div>
             </div>
           </div>
@@ -239,7 +242,7 @@
               </h5>
               <h6 class="margin-t-9">May 2020 - Aug 2020</h6>
               <ul class="list margin-b-30">
-                <li>Pair and mob programmed on the full stack Channels/RoleIQ/Profile teams utilizing React and Redux for frontend with TypeScript, Node, C#, .Net, and PostgreSQL for backend</li>
+                <li>Pair and mob programmed on the full stack Channels/RoleIQ team</li>
                 <li>Designed and developed an Express middleware security package distributed to 60 engineering teams to prevent cross-site scripting attacks on all Pluralsight webpages</li>
                 <li>Interviewed external stakeholders to discover use cases and refine product designs</li>
               </ul>
