--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<br>
 							<p>Hi, I'm Austin, a rising senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. I'm passionate about full stack development!
 								<br>
-								<br>This summer I'm developing a platform for restaurants to reach their customers with DoorDash!</p>
+								<br>This past summer I built an onboarding experience for self-delivery merchants to join DoorDash!</p>
 						</div>
 						<br>
 						<ul class="social-icons">
@@ -224,10 +224,10 @@
               <h5 class="font-yellow">
                 <b>DoorDash | Remote</b>
               </h5>
-              <h6 class="margin-t-9">Summer 2021</h6>
+              <h6 class="margin-t-9">May 2021 - Aug 2021</h6>
               <ul class="list margin-b-30">
-                <li>Architect and implement an onboarding experience for self-delivery merchants to add themselves to the DoorDash platform, expanding merchant selection for consumers</li>
-                <li>Create trial info components to drive increased merchant onboarding conversion</li>
+                <li>Architected and implemented a full stack React/Kotlin onboarding experience for self-delivery merchants, resulting in a 29% relative increase in conversion rate and a 14x reduction in downtime</li>
+                <li>Led cross-functional collaboration across 7 teams to gather requirements, resolve issues, and drive project to completion</li>
               </ul>
               <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">TypeScript</span> <span class="skill">React</span> <span class="skill">Redux</span> <span class="skill">Kotlin</span> <span class="skill">REST</span> <span class="skill">PostgreSQL</span> </div>
             </div>
