--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<ul class="social-icons">
 							<li class="git"><a href="https://github.com/austin-leung"><i class="ion-social-github"></i></a></li>
 							<li class="linkedin"><a href="https://www.linkedin.com/in/austinhleung"><i class="ion-social-linkedin"></i></a></li>
-							<li class="mail"><a href="mailto:austinle@cs.cmu.edu"><i class="ion-android-mail"></i></a></li>
+							<li class="mail"><a href="mailto:austinhleung@gmail.com"><i class="ion-android-mail"></i></a></li>
 						</ul> <a class="btn btn-border-purple" href="imgs/Austin Leung Resume.pdf">Resume</a>
 					</div>
 					<!-- intro -->
