--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 	<link href="common-css/ionicons.css" rel="stylesheet">
 	<link href="common-css/fluidbox.min.css" rel="stylesheet">
 	<link href="css/responsiveStyles.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/styles.css" /> </head>
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8B0DPEVMF7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8B0DPEVMF7');
+  </script>
+</head>
 
 <body>
 	<section class="intro-section">
