Small resume update

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               </h5>
               <h6 class="margin-t-9">May 2021 - Aug 2021</h6>
               <ul class="list margin-b-30">
-                <li>Architected and implemented a full stack React/Kotlin onboarding experience for self-delivery merchants, resulting in a 29% relative increase in conversion rate and a 14x reduction in downtime</li>
+                <li>Architected and implemented a full stack React/Kotlin onboarding experience for self-delivery merchants, resulting in an 86% relative increase in conversion rate and a 14x reduction in downtime</li>
                 <li>Led cross-functional collaboration across 7 teams to gather requirements, resolve issues, and drive project to completion</li>
               </ul>
               <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">TypeScript</span> <span class="skill">React</span> <span class="skill">Redux</span> <span class="skill">Kotlin</span> <span class="skill">REST</span> <span class="skill">PostgreSQL</span> </div>
