--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<li class="git"><a href="https://github.com/austin-leung"><i class="ion-social-github"></i></a></li>
 							<li class="linkedin"><a href="https://www.linkedin.com/in/austinhleung"><i class="ion-social-linkedin"></i></a></li>
 							<li class="mail"><a href="mailto:austinhleung@gmail.com"><i class="ion-android-mail"></i></a></li>
-						</ul> <a class="btn btn-border-purple" href="imgs/Austin Leung Resume.pdf">Resume</a>
+						</ul> <a class="btn btn-border-mint" href="imgs/Austin Leung Resume.pdf">Resume</a>
 					</div>
 					<!-- intro -->
 				</div>
