--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div id="banner-text">
 							<h1 class="vcard"><span class="fn">Austin Leung</span></h1>
 							<br>
-							<p>Hi, I'm Austin, a rising senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. I'm passionate about full stack development!
+							<p>Hi, I'm Austin, a senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. I'm passionate about full stack development!
 								<br>
 								<br>This past summer I built an onboarding experience for self-delivery merchants to join DoorDash!</p>
 						</div>
@@ -111,6 +111,18 @@
       <!-- close row -->
       <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect"> <img class="img-responsive" src="imgs/StudyBuddy.png" alt="StudyBuddy">
+            <div class="overlay">
+              <h2>StudyBuddy</h2>
+              <a class="info" href="./imgs/StudyBuddyPoster.pdf">
+                <div class="infoText"> The StudyBuddy iOS app helps students increase productivity by accompanying them with a virtual character as they work. Completing tasks gives users coins to buy more accessories!
+                  <div class="skills"> <span class="skill">Swift</span> </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect"> <img class="img-responsive" src="imgs/gvcs.png" alt="GVCS Database System">
             <div class="overlay">
               <h2>GVCS Database System</h2>
@@ -134,6 +146,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <!-- close row -->
+      <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect"> <img class="img-responsive" src="imgs/reddit.png" alt="Reddit">
             <div class="overlay">
@@ -148,9 +163,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <!-- close row -->
-      <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <picture>
@@ -179,6 +191,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <!-- close row -->
+      <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect"> <img class="img-responsive" src="imgs/abomasnow.png" alt="Pokemon">
             <div class="overlay">
@@ -191,9 +206,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <!-- close row -->
-      <div class="row justify-content-md-center proj-row">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect"> <img class="img-responsive" src="imgs/findthesets.png" alt="Find the Sets">
             <div class="overlay">
