--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<li class="git"><a href="https://github.com/austin-leung"><i class="ion-social-github"></i></a></li>
 							<li class="linkedin"><a href="https://www.linkedin.com/in/austinhleung"><i class="ion-social-linkedin"></i></a></li>
 							<li class="mail"><a href="mailto:austinhleung@gmail.com"><i class="ion-android-mail"></i></a></li>
-						</ul> <a class="btn btn-border-mint" href="imgs/Austin Leung Resume.pdf">Resume</a>
+						</ul> <a class="btn btn-resume" href="imgs/Austin Leung Resume.pdf">Resume</a>
 					</div>
 					<!-- intro -->
 				</div>
@@ -89,7 +89,7 @@
               <h2>TextLive</h2>
               <a class="info textlive" href="https://play.google.com/store/apps/details?id=com.textlive">
                 <div class="infoText"> An Android app where users have a conversation through live text instead of separately sent messages.
-                  <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">React Native</span> <span class="skill">Node</span> <span class="skill">Express</span> <span class="skill">MongoDB</span> </div>
+                  <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">React Native</span> <span class="skill">Node</span> <span class="skill">MongoDB</span> </div>
                 </div>
               </a>
             </div>
@@ -157,7 +157,7 @@
                 <div class="infoText"> A web app visualizing sentiment of Reddit posts and comments through different colors and intensities.
                   <br/>
                   <br/> <i>1st Place - CodeDay Pittsburgh Spring 2019</i>
-                  <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">React</span> <span class="skill">Node</span> <span class="skill">Express</span> </div>
+                  <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">React</span> <span class="skill">Node</span> </div>
                 </div>
               </a>
             </div>
@@ -239,12 +239,28 @@
           </div>
         </div>
         <!-- col-sm-4 -->
+        <!-- experience list -->
+
         <div class="col-sm-9">
+          <div class="experience margin-b-50 row exp-row">
+            <div class="col-sm-2 company"> <img src="imgs/citsec.png" alt="Citadel Securities" /> </div>
+            <div class="col-sm-10">
+              <h4><b>Software Engineer</b></h4>
+              <h5 class="font-company">
+                <b>Citadel Securities | New York, NY</b>
+              </h5>
+              <h6 class="margin-t-9">Sept 2022 - Present</h6>
+              <ul class="list margin-b-30">
+                <li>ETF UI Team</li>
+              </ul>
+              <div class="skills"> <span class="skill">React</span> <span class="skill">Node</span> <span class="skill">HTML/CSS/JS</span> </div>
+            </div>
+          </div>
           <div class="experience margin-b-50 row exp-row">
             <div class="col-sm-2 company"> <img src="imgs/dd.png" alt="DoorDash" /> </div>
             <div class="col-sm-10">
               <h4><b>Software Engineer Intern</b></h4>
-              <h5 class="font-yellow">
+              <h5 class="font-company">
                 <b>DoorDash | Remote</b>
               </h5>
               <h6 class="margin-t-9">May 2021 - Aug 2021</h6>
@@ -252,15 +268,14 @@
                 <li>Architected and implemented a full stack React/Kotlin onboarding experience for self-delivery merchants, resulting in an 86% relative increase in conversion rate and a 14x reduction in downtime</li>
                 <li>Led cross-functional collaboration across 7 teams to gather requirements, resolve issues, and drive project to completion</li>
               </ul>
-              <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">TypeScript</span> <span class="skill">React</span> <span class="skill">Redux</span> <span class="skill">Kotlin</span> <span class="skill">REST</span> <span class="skill">PostgreSQL</span> </div>
+              <div class="skills"> <span class="skill">React</span> <span class="skill">TypeScript</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Redux</span> <span class="skill">Kotlin</span> <span class="skill">PostgreSQL</span> </div>
             </div>
           </div>
-          <!-- experience -->
           <div class="experience margin-b-50 row exp-row">
             <div class="col-sm-2 company"> <img src="imgs/ps.png" alt="Pluralsight" /> </div>
             <div class="col-sm-10">
               <h4><b>Software Developer Intern</b></h4>
-              <h5 class="font-yellow">
+              <h5 class="font-company">
                 <b>Pluralsight | Remote</b>
               </h5>
               <h6 class="margin-t-9">May 2020 - Aug 2020</h6>
@@ -269,7 +284,7 @@
                 <li>Designed and developed an Express middleware security package distributed to 60 engineering teams to prevent cross-site scripting attacks on all Pluralsight webpages</li>
                 <li>Interviewed external stakeholders to discover use cases and refine product designs</li>
               </ul>
-              <div class="skills"> <span class="skill">HTML/CSS/JS</span> <span class="skill">TypeScript</span> <span class="skill">React</span> <span class="skill">Redux</span> <span class="skill">Node</span> <span class="skill">Express</span> <span class="skill">C#</span> <span class="skill">.Net</span> <span class="skill">PostgreSQL</span> <span class="skill">Docker</span> </div>
+              <div class="skills"> <span class="skill">React</span> <span class="skill">TypeScript</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Redux</span> <span class="skill">Node</span> <span class="skill">C#</span> <span class="skill">.Net</span> <span class="skill">PostgreSQL</span> <span class="skill">Docker</span> </div>
             </div>
           </div>
           <!-- experience -->
@@ -277,13 +292,13 @@
             <div class="col-sm-2 company"> <img src="imgs/scs.gif" alt="CMU SCS" /> </div>
             <div class="col-sm-10">
               <h4><b>Teaching Assistant (Principles of Imperative Computation)</b></h4>
-              <h5 class="font-yellow">
+              <h5 class="font-company">
                 <b>CMU School of Computer Science | Pittsburgh, PA</b>
               </h5>
               <h6 class="margin-t-9">August 2019 - Present</h6>
               <ul class="list margin-b-30">
-                <li>Teach data structures, algorithms, and C language concepts to 500 students each semester</li>
-                <li>Lead weekly labs & recitations, participate in grading sessions, and hold office hours</li>
+                <li>Taught data structures, algorithms, and C language concepts to 500 students each semester</li>
+                <li>Led weekly labs & recitations, participate in grading sessions, and hold office hours</li>
               </ul>
               <div class="skills"> <span class="skill">C</span> </div>
             </div>
@@ -296,12 +311,12 @@
             </div>
             <div class="col-sm-10">
               <h4><b>Data & Machine Learning Research Assistant</b></h4>
-              <h5 class="font-yellow">
+              <h5 class="font-company">
                 <b>MultiComp Lab - Language Technologies Institute | Pittsburgh, PA</b>
               </h5>
               <h6 class="margin-t-9">May 2019 - May 2020</h6>
               <ul class="list margin-b-30">
-                <li>Explored web data crawling mechanisms to compile 3 multimodal datasets</li>
+                <li>Explored web data crawling mechanisms to compile three multimodal datasets</li>
                 <li>Built deep learning convolutional neural networks with PyTorch to detect multimodal patterns</li>
               </ul>
               <div class="skills"> <span class="skill">Python</span> <span class="skill">PyTorch</span> </div>
@@ -312,7 +327,7 @@
             <div class="col-sm-2 company"> <img src="imgs/adagio.png" alt="Adagio" /> </div>
             <div class="col-sm-10">
               <h4><b>Technology Intern</b></h4>
-              <h5 class="font-yellow"><b>Adagio Digital Guitar School | Remote</b></h5>
+              <h5 class="font-company"><b>Adagio Digital Guitar School | Remote</b></h5>
               <h6 class="margin-t-9">May 2019 - Oct 2019</h6>
               <ul class="list margin-b-30">
                 <li>Led initial design and development of Adagio’s website and features to reach minimum viable product for customers and investors</li>
