--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 						<div id="banner-text">
 							<h1 class="vcard"><span class="fn">Austin Leung</span></h1>
 							<br>
-							<p>Hi, I'm Austin, a senior at Carnegie Mellon University studying Information Systems with minors in Computer Science and Software Engineering. I'm passionate about full stack development!
-								<br>
-								<br>This past summer I built an onboarding experience for self-delivery merchants to join DoorDash!</p>
+							<p>
+                Hi, I'm Austin! I'm a software engineer currently focused on bridging the gap between tech and finance.
+                <br><br>
+                I recently graduated from Carnegie Mellon University where I taught computer science, acted in theater, played sports, and led a cultural club! I'm passionate about full stack development and using software to impact the world around me.
+              </p>
 						</div>
 						<br>
 						<ul class="social-icons">
@@ -295,7 +297,7 @@
               <h5 class="font-company">
                 <b>CMU School of Computer Science | Pittsburgh, PA</b>
               </h5>
-              <h6 class="margin-t-9">August 2019 - Present</h6>
+              <h6 class="margin-t-9">August 2019 - May 2022</h6>
               <ul class="list margin-b-30">
                 <li>Taught data structures, algorithms, and C language concepts to 500 students each semester</li>
                 <li>Led weekly labs & recitations, participate in grading sessions, and hold office hours</li>
