make footer friendly

--- a/index.html
+++ b/index.html
@@ -348,10 +348,9 @@
 	</section>
 	<!-- experience-section -->
 	<footer>
-		<p class="copyright"> &copy;
-			<script>
-			document.write(new Date().getFullYear());
-			</script> Austin Leung </p>
+		<p class="copyright">
+      Thanks for visiting! 🎉
+    </p>
 	</footer>
 	<!-- SCRIPTS -->
 	<script src="common-js/jquery-3.2.1.min.js"></script>
