same order skills

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               <ul class="list margin-b-30">
                 <li>ETF UI Team</li>
               </ul>
-              <div class="skills"> <span class="skill">React</span> <span class="skill">Node</span> <span class="skill">HTML/CSS/JS</span> </div>
+              <div class="skills"> <span class="skill">React</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Node</span> </div>
             </div>
           </div>
           <div class="experience margin-b-50 row exp-row">
