--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<p>
                 Hi, I'm Austin! I'm a software engineer currently focused on bridging the gap between tech and finance.
                 <br><br>
-                I recently graduated from Carnegie Mellon University where I taught computer science, acted in theater, played sports, and led a cultural club! I'm passionate about full stack development and using software to impact the world around me.
+                I graduated from Carnegie Mellon University where I taught computer science, acted in theater, played sports, and led a cultural club! I'm passionate about full stack development and using software to impact the world around me.
               </p>
 						</div>
 						<br>
@@ -253,9 +253,9 @@
               </h5>
               <h6 class="margin-t-9">Sept 2022 - Present</h6>
               <ul class="list margin-b-30">
-                <li>ETF UI Team</li>
+                <li>Semi-Systematic Equities UI Team</li>
               </ul>
-              <div class="skills"> <span class="skill">React</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Node</span> </div>
+              <div class="skills"> <span class="skill">React</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">kdb+</span> <span class="skill">Q</span> <span class="skill">Python</span> </div>
             </div>
           </div>
           <div class="experience margin-b-50 row exp-row">
@@ -270,7 +270,7 @@
                 <li>Architected and implemented a full stack React/Kotlin onboarding experience for self-delivery merchants, resulting in an 86% relative increase in conversion rate and a 14x reduction in downtime</li>
                 <li>Led cross-functional collaboration across 7 teams to gather requirements, resolve issues, and drive project to completion</li>
               </ul>
-              <div class="skills"> <span class="skill">React</span> <span class="skill">TypeScript</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Redux</span> <span class="skill">Kotlin</span> <span class="skill">PostgreSQL</span> </div>
+              <div class="skills"> <span class="skill">React</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Redux</span> <span class="skill">Kotlin</span> <span class="skill">PostgreSQL</span> </div>
             </div>
           </div>
           <div class="experience margin-b-50 row exp-row">
@@ -286,7 +286,7 @@
                 <li>Designed and developed an Express middleware security package distributed to 60 engineering teams to prevent cross-site scripting attacks on all Pluralsight webpages</li>
                 <li>Interviewed external stakeholders to discover use cases and refine product designs</li>
               </ul>
-              <div class="skills"> <span class="skill">React</span> <span class="skill">TypeScript</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Redux</span> <span class="skill">Node</span> <span class="skill">C#</span> <span class="skill">.Net</span> <span class="skill">PostgreSQL</span> <span class="skill">Docker</span> </div>
+              <div class="skills"> <span class="skill">React</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Redux</span> <span class="skill">Node</span> <span class="skill">C#</span> <span class="skill">.Net</span> <span class="skill">PostgreSQL</span> <span class="skill">Docker</span> </div>
             </div>
           </div>
           <!-- experience -->
