--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               </h5>
               <h6 class="margin-t-9">May 2021 - Aug 2021</h6>
               <ul class="list margin-b-30">
-                <li>Architected and implemented a full stack React/Kotlin onboarding experience for self-delivery merchants, resulting in an 86% relative increase in conversion rate and a 14x reduction in downtime</li>
+                <li>Architected and implemented a full stack onboarding experience for self-delivery merchants, resulting in an 86% relative increase in conversion rate and a 14x reduction in downtime (React/Kotlin)</li>
                 <li>Led cross-functional collaboration across 7 teams to gather requirements, resolve issues, and drive project to completion</li>
               </ul>
               <div class="skills"> <span class="skill">React</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Redux</span> <span class="skill">Kotlin</span> <span class="skill">PostgreSQL</span> </div>
@@ -282,9 +282,8 @@
               </h5>
               <h6 class="margin-t-9">May 2020 - Aug 2020</h6>
               <ul class="list margin-b-30">
-                <li>Pair and mob programmed on the full stack Channels/RoleIQ team</li>
-                <li>Designed and developed an Express middleware security package distributed to 60 engineering teams to prevent cross-site scripting attacks on all Pluralsight webpages</li>
-                <li>Interviewed external stakeholders to discover use cases and refine product designs</li>
+                <li>Pair and mob programmed daily in tandem with the full stack playlists and profile team (React/TypeScript/Node)</li>
+                <li>Designed an Express middleware security package distributed to 60 engineering teams to prevent cross-site scripting attacks on all Pluralsight webpages</li>
               </ul>
               <div class="skills"> <span class="skill">React</span> <span class="skill">HTML/CSS/JS</span> <span class="skill">Redux</span> <span class="skill">Node</span> <span class="skill">C#</span> <span class="skill">.Net</span> <span class="skill">PostgreSQL</span> <span class="skill">Docker</span> </div>
             </div>
